feat: Add Quartus II 13.1 compatibility transformations
Implement comprehensive transformation framework for converting Verilog code to Quartus II 13.1 compatible format.

FEATURES:
- ModuleDupFix: Remove duplicate module definitions
- HierarchyFix: Fix invalid module names and update references
- SignedTypeFix: Handle signed types with comment preservation
- WireRegFix: Convert procedurally assigned wires to regs
- QuartusTransformer: Main facade applying fixes in correct order
- VerilogToQuartus: Utility for complete transformation pipeline

IMPLEMENTATION:
- 8 implementation files (~37 KB)
- 1 comprehensive test file (~11 KB) with 25+ test cases
- Full documentation with examples and quick reference
- Safe transformations preserving functionality
- Proper error handling and logging

FIXES QUARTUS ERRORS:
- Error 10170: Invalid module name (numeric-only, starts with digit)
- Error 10137: Wire is not procedural (assigned in always)
- Multiple module definitions
- Signed type issues

TESTING:
- Unit tests for each Fix class
- Integration tests for complete pipeline
- Edge case and error handling tests
- All tests passing

DOCUMENTATION:
- QUARTUS_TRANSFORM_README.md: Comprehensive guide
- QUARTUS_QUICK_REF.md: Quick reference
- IMPLEMENTATION_SUMMARY.md: Project summary
- TransformExamples.scala: 9 practical examples

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>